# StockAI

./: README.md
GetData/: GetStockCodes.py  huStock.pickle
GetData/eastmoney/: GetStockList.py
VC/: CMakeLists.txt  GIT.txt
VC/include/webdriverxx/utils/: picobase64.h
VC/test/: CMakeLists.txt  Eastmoney.cpp  browsers_test.cpp  webdriver_test.cpp
